changed access to douban api from asi-http-request to HTTPRequestWrapper..

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
 [submodule "ytoolkit"]
 	path = ytoolkit
 	url = https://github.com/sprhawk/ytoolkit.git
-[submodule "externals/asi-http-request"]
-	path = externals/asi-http-request
-	url = https://github.com/pokeb/asi-http-request.git
 [submodule "externals/SBJson"]
 	path = externals/SBJson
 	url = https://github.com/stig/json-framework.git
+[submodule "externals/HTTPRequestWrapper"]
+	path = externals/HTTPRequestWrapper
+	url = git://github.com/sprhawk/HTTPRequestWrapper.git
